Add Patient Component

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,8 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+
+<div class="layout-row flex">
+  <div class="flex"/>
+  <div class="flex-50">{{patient-data}}</div>
+  <div class="flex"/>
+</div>
 
 {{outlet}}
